--- a/site/index.html
+++ b/site/index.html
@@ -22,11 +22,11 @@
     "name": "A+ Merchandising",
     "description": "Premium medical scrubs and lab wear for healthcare professionals. Global shipping available.",
     "url": "https://yourdomain.example/",
-    "telephone": "+11234567890",
-    "email": "info@aplusmerch.com",
+    "telephone": "+917983348571, +917042910499",
+    "email": "arjunsbisht21@gmail.com",
     "address": {
       "@type": "PostalAddress",
-      "addressCountry": "US"
+      "addressCountry": "IN"
     }
   }
   </script>
@@ -108,8 +108,8 @@
           <p>Questions about bulk pricing, custom colors, or global accounts? Send us a message and we'll get back within 24–48 hours.</p>
 
           <address>
-            <strong>Email:</strong> <a href="mailto:info@aplusmerch.com">info@aplusmerch.com</a><br>
-            <strong>Phone:</strong> +1 (123) 456‑7890
+            <strong>Email:</strong> <a href="mailto:arjunsbisht21@gmail.com">arjunsbisht21@gmail.com</a><br>
+            <strong>Phone:</strong> 91 7983348571 I 91 7042910499
           </address>
         </div>
 
@@ -120,7 +120,7 @@
           <input type="email" name="email" placeholder="Email" required aria-required="true">
           <textarea name="message" rows="5" placeholder="How can we help?" required aria-required="true"></textarea>
           <button type="submit" class="btn primary">Send Message</button>
-          <p class="form-note">Or email <a href="mailto:info@aplusmerch.com">info@aplusmerch.com</a></p>
+          <p class="form-note">Or email <a href="mailto:arjunsbisht21@gmail.com">arjunsbisht21@gmail.com</a></p>
         </form>
       </div>
     </section>
