Use deck logo and move About to top of the site

--- a/site/index.html
+++ b/site/index.html
@@ -13,8 +13,8 @@
 
   <title>A+ Merchandising — Premium Medical Scrubs</title>
   <meta name="keywords" content="medical scrubs, scrubs, lab coats, nurse uniforms, healthcare apparel, A+ Merchandising, global shipping">
-  <link rel="icon" href="images/logo.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="images/logo.svg">
+  <link rel="icon" href="images/logo.jpg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="images/logo.jpg">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -36,7 +36,7 @@
   <header class="site-header">
     <div class="container header-row">
       <a class="logo" href="#home" aria-label="A Plus Merchandising homepage">
-        <img src="images/logo.svg" alt="A+" width="48" height="48">
+        <img src="images/logo.jpg" alt="A+" width="48" height="48">
         <span class="brand">A+ Merchandising</span>
       </a>
 
@@ -60,6 +60,19 @@
   </header>
 
   <main>
+    <section id="about" class="section dark-section">
+      <div class="container">
+        <h2>About A+ Merchandising</h2>
+        <p>We specialize in high-quality medical apparel tailored for doctors, nurses, students, and healthcare professionals. Focused on comfort, durability, hygiene, and a professional look that inspires confidence—made to perform across the globe.</p>
+        <ul>
+          <li>Comfort: Breathable, stretch-enhanced fabrics</li>
+          <li>Durability: Reinforced stitching and quality dyes</li>
+          <li>Hygiene: Easy-care, antimicrobial treatments available</li>
+          <li>Global reach: Streamlined shipping & international support</li>
+        </ul>
+      </div>
+    </section>
+
     <section id="home" class="hero">
       <div class="container hero-grid">
         <div class="hero-copy">
@@ -85,19 +98,6 @@
         <div class="product-grid" id="productGrid">
           <!-- Products injected by script.js -->
         </div>
-      </div>
-    </section>
-
-    <section id="about" class="section dark-section">
-      <div class="container">
-        <h2>About A+ Merchandising</h2>
-        <p>We specialize in high-quality medical apparel tailored for doctors, nurses, students, and healthcare professionals. Focused on comfort, durability, hygiene, and a professional look that inspires confidence—made to perform across the globe.</p>
-        <ul>
-          <li>Comfort: Breathable, stretch-enhanced fabrics</li>
-          <li>Durability: Reinforced stitching and quality dyes</li>
-          <li>Hygiene: Easy-care, antimicrobial treatments available</li>
-          <li>Global reach: Streamlined shipping & international support</li>
-        </ul>
       </div>
     </section>
 
