Use A+Merch.png as site logo and favicon

--- a/site/index.html
+++ b/site/index.html
@@ -13,8 +13,8 @@
 
   <title>A+ Merchandising — Premium Medical Scrubs</title>
   <meta name="keywords" content="medical scrubs, scrubs, lab coats, nurse uniforms, healthcare apparel, A+ Merchandising, global shipping">
-  <link rel="icon" href="images/logo.jpg" type="image/jpeg">
-  <link rel="apple-touch-icon" href="images/logo.jpg">
+  <link rel="icon" href="images/A+Merch.png" type="image/png">
+  <link rel="apple-touch-icon" href="images/A+Merch.png">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -36,8 +36,7 @@
   <header class="site-header">
     <div class="container header-row">
       <a class="logo" href="#home" aria-label="A Plus Merchandising homepage">
-        <img src="images/logo.jpg" alt="A+" width="48" height="48">
-        <span class="brand">A+ Merchandising</span>
+        <img src="images/A+Merch.png" alt="A+ Merchandising logo" width="48" height="48">
       </a>
 
       <nav aria-label="Main navigation" class="main-nav">
