--- a/blackbox-output-code-QPQSKENBSX.html
+++ b/blackbox-output-code-QPQSKENBSX.html
@@ -28,13 +28,11 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <p>A+ Merchandising specializes in high-quality medical apparel tailored for doctors, nurses, students, and healthcare professionals. Our products prioritize comfort for extended wear, durability against daily rigors, hygiene to meet medical standards, and a professional look that inspires confidence.</p>
-        <ul>
-            <li>Comfort: Breathable fabrics for all-day ease.</li>
-            <li>Durability: Reinforced stitching and fade-resistant materials.</li>
-            <li>Hygiene: Antimicrobial treatments and easy-to-clean designs.</li>
-            <li>Aesthetics: Sleek, professional styles in various sizes and colors.</li>
-        </ul>
+        <p>We helps businesses craft unique promotional merchandise that elevates brand visibility. From custom-branded goods to a wide selection of corporate gifts, we offer products that are sure to be favorites</p>
+        <h3>Innovation</h3>
+        <p>We understand the importance of staying ahead in a fast-paced world. That's why we continuously seek out the latest trends, technologies, and printing methods to provide our clients with the most innovative and effective custom merchandise solutions.</p>
+        <h3>Collaboration</h3>
+        <p>We believe that great things happen when people work together. Our team of experts collaborates closely with clients to understand their vision, offer guidance, and develop custom merchandise solutions that truly reflect their brand's identity and values.</p>
     </section>
 
     <section id="products">
@@ -73,7 +71,7 @@
             <textarea placeholder="Message"></textarea>
             <button type="submit">Send</button>
         </form>
-        <p>Email: arjunsbisht21@gmail.com | Phone: 91 7983348571 I 91 7042910499</p>
+        <p>Email: contactaplusmerch@gmail.com | Phone: 91 7983348571 I 91 7042910499</p>
     </section>
 
     <footer>
